--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ body {
   letter-spacing: 3px;
 }
 .headingH4--aboutOwner {
+  color: #07964c;
   font-size: clamp(1.4rem, 6vw, 1.6rem);
   font-weight: 700;
   letter-spacing: 1px;
