--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -95,6 +95,7 @@ body {
 	line-height: 1.2;
 	letter-spacing: 3px;
 	&--aboutOwner {
+		color: $cf-shamrockGreen;
 		font-size: clamp(1.4rem, 6vw, 1.6rem);
 		font-weight: 700;
 		letter-spacing: 1px;
