change styling of servicesListItem

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -66,7 +66,7 @@ body {
 		text-underline-offset: 3px;
 	}
 	&--servicesListItemHeading {
-		color: $cf-neonBlue;
+		color: $cf-dark-shamrockGreen;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: left;
 		line-height: 1.1;
