--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ body {
   text-underline-offset: 3px;
 }
 .headingH3--servicesListItemHeading {
-  color: #0062ffff;
+  color: #016732;
   font-size: clamp(1.5rem, 5vw, 1.7rem);
   text-align: left;
   line-height: 1.1;
@@ -826,8 +826,8 @@ body {
   gap: 2rem;
   align-items: flex-start;
   gap: 0.5rem;
-  background-color: #b9b9b9;
-  border: 2px solid #0062ffff;
+  background: linear-gradient(135deg, #cecece, rgba(137, 137, 137, 0.5), rgba(137, 137, 137, 0.95));
+  border: 2px solid #07964c;
   border-radius: none;
   box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
   padding: 2rem;
