--- a/css/styles.css
+++ b/css/styles.css
@@ -865,7 +865,7 @@ body {
 }
 .services__serviceArticleImage {
   display: block;
-  border: 2px solid #0062ffff;
+  border: 2px solid #07964c;
   width: 100%;
   height: auto;
   padding: 0.25rem;
