--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -82,7 +82,7 @@ main {
       }
       &__serviceArticleImage {
             display: block;
-            border: 2px solid $cp-neonBlue;
+            border: 2px solid $cp-shamrockGreen;
             width: 100%;
             height: auto;
             padding: .25rem;
