change content and styles of servicesArticleAreasListContainer

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -101,7 +101,7 @@ body {
 		letter-spacing: 1px;
 	}
 	&--serviceAreasHeading {
-		color: $cf-neonBlue;
+		color: $cf-dark-shamrockGreen;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: left;
 		line-height: 1.1;
