change styling of processListItem

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -72,7 +72,7 @@ body {
 		line-height: 1.1;
 	}
 	&--processListItemHeading {
-		color: $cf-neonBlue;
+		color: $cf-dark-shamrockGreen;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: center;
 		line-height: 1.1;
