--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ body {
   line-height: 1.1;
 }
 .headingH3--processListItemHeading {
-  color: #0062ffff;
+  color: #016732;
   font-size: clamp(1.5rem, 5vw, 1.7rem);
   text-align: center;
   line-height: 1.1;
@@ -903,8 +903,8 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.5rem;
-  background-color: #b9b9b9;
-  border: 2px solid #0062ffff;
+  background: linear-gradient(135deg, #cecece, rgba(137, 137, 137, 0.5), rgba(137, 137, 137, 0.95));
+  border: 2px solid #07964c;
   box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
   width: 100%;
   padding: 2rem;
