--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -105,13 +105,10 @@ main {
       &__processListItem {
             @include displayFlexColumn;
             gap: .5rem;
-            background-color: $cp-lightGrey;
-            border: 2px solid $cp-neonBlue;
-            // border-radius: 100%;
+            background: linear-gradient(135deg, rgba($cp-silver, 1), rgba($cp-grey, .5), rgba($cp-grey, .95));
+            border: 2px solid $cp-shamrockGreen;
             box-shadow: $bs-dark;
             width: 100%;
-            // width: clamp(27rem, 85vw, 35rem);
-            // height: clamp(27rem, 85vw, 35rem);
             padding: 2rem;
       }
       &__servicesArticle {
