change color of icons and text in contact

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -122,7 +122,7 @@ body {
 		font-weight: 900;
 	} 
 	&--contactArticle {
-		color: $cf-neonBlue;
+		color: $cf-dark-blue;
 		font-weight: 700;
 		text-decoration: underline;
 		text-underline-offset: 2px;
