--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ body {
   font-weight: 900;
 }
 .paragraph--contactArticle {
-  color: #0062ffff;
+  color: #001d49;
   font-weight: 700;
   text-decoration: underline;
   text-underline-offset: 2px;
