--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -24,7 +24,7 @@
             height: calc(#{$contactDetailIconSizeHeight} - .5rem);
       }
       &__contactGoogleMapsIframeContainer {
-            border: 2px solid $cp-neonBlue;
+            border: 2px solid $cp-shamrockGreen;
             width: min(100%, 45rem);
             padding: .25rem;
             margin-top: .75rem;
