--- a/css/styles.css
+++ b/css/styles.css
@@ -684,6 +684,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  background: linear-gradient(135deg, #cecece, rgba(137, 137, 137, 0.5), rgba(137, 137, 137, 0.95));
   border: 2px solid #07964c;
   box-shadow: 0 0 12px 2px rgba(0, 28, 41, 0.25);
   padding: 2rem;
@@ -702,6 +703,7 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.25rem;
+  background-color: #cececeff;
   box-shadow: 2px 2px 3px 1px rgba(0, 28, 41, 0.25);
   padding: 0.5rem;
 }
