--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,6 +17,7 @@
       }
       &__heroCredentialsContainer {
             @include displayFlexColumn;
+            background: linear-gradient(135deg, rgba($cp-silver, 1), rgba($cp-grey, .5), rgba($cp-grey, .95));
             border: 2px solid $cp-shamrockGreen;
             box-shadow: 0 0 12px 2px rgba($cp-richBlack, .25);
             padding: 2rem;
@@ -27,6 +28,7 @@
       &__figure {
             @include displayFlexColumn;
             gap: .25rem;
+            background-color: $cp-silver;
             box-shadow: 2px 2px 3px 1px rgba($cp-richBlack, .25);
             padding: .5rem;
       }
