--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -127,9 +127,12 @@ body {
 		text-decoration: underline;
 		text-underline-offset: 2px;
 	}
+	&--address {
+		font-weight: 700;
+	}
 	&--footerDeveloper {
 		color: $cf-dark-blue;
-		font-weight: 500;
+		font-weight: 700;
 		font-size: clamp(1.2rem, 4.3vw, 1.4rem);
 	}
 }
@@ -160,7 +163,7 @@ body {
 		text-underline-offset: 3px;
 	}
 	&--footerNavlinkDev {
-		color: $cf-silver;
+		color: $cf-neonBlue;
 		font-weight: 700;
 		text-decoration: underline;
 		text-underline-offset: 3px;
