change line height and add margin top to footerDeveloperParagraph

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -35,6 +35,7 @@
       }
       &__footerDeveloperParagraph {
             @include displayFlexColumn;
-            gap: .25rem;
+            gap: 0rem;
+            margin-top: 1rem;
       }
 }
