--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ body {
   font-weight: 700;
   text-decoration: underline;
   text-underline-offset: 3px;
+  line-height: 1;
 }
 
 .logo__text {
@@ -648,7 +649,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  gap: 0.25rem;
+  gap: 0rem;
+  margin-top: 1rem;
 }
 
 .header {
