--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,9 @@ body {
 .paragraph--address {
   font-weight: 700;
 }
+.paragraph--footerCopyright {
+  font-size: clamp(1.2rem, 5vw, 2rem);
+}
 .paragraph--footerDeveloper {
   color: #001d49;
   font-weight: 700;
