--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -130,6 +130,9 @@ body {
 	&--address {
 		font-weight: 700;
 	}
+	&--footerCopyright {
+		font-size: clamp(1.2rem, 5vw, 2rem);
+	}
 	&--footerDeveloper {
 		color: $cf-dark-blue;
 		font-weight: 700;
