change styling of footer logo and heading and footer background gradient

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -65,6 +65,7 @@ $cp-shamrockGreen: #07964c;
 $cp-emerald: #20cb72ff;
 $cp-redCmyk: #dd0000ff;
 $cp-silver: #cececeff;
+$cp-darkGrey:rgb(111, 110, 110);
 $cp-grey: #898989;
 $cp-lightGrey: #b9b9b9;
 
