--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ body {
   line-height: 1.1;
 }
 .headingH3--footerFigure {
+  color: #001d49;
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.8rem, 5vw, 2.4rem);
   font-weight: 900;
@@ -603,7 +604,7 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 2rem;
-  background: linear-gradient(180deg, #898989, rgba(185, 185, 185, 0.5), rgba(185, 185, 185, 0.6));
+  background: linear-gradient(135deg, rgba(0, 29, 73, 0.65), rgba(111, 110, 110, 0.5), rgba(137, 137, 137, 0.3), #b9b9b9, rgba(111, 110, 110, 0.5), rgba(0, 29, 73, 0.64));
   border-top: 2px solid #001d49;
   padding: 5rem 1rem 1rem;
 }
@@ -618,6 +619,7 @@ body {
   display: flex;
   order: 2px solid #00ff33ff;
   border-radius: 10000px;
+  box-shadow: -3px 3px 25px 1px #001c29;
   width: 20rem;
   height: auto;
 }
