--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -78,6 +78,7 @@ body {
 		line-height: 1.1;
 	}
 	&--footerFigure {
+		color: $cp-dark-blue;
 		font-family: "Montserrat", sans-serif; 
 		font-size: clamp(1.8rem, 5vw, 2.4rem);
 		font-weight: 900;
