--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/divLink";
 @import "components/logo";
 @import "components/navigation";
 @import "components/socialmedia";
