--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/socialmedia";
 
 @import "layout/address";
+@import "layout/aside";
 @import "layout/footer";
 @import "layout/header";
 @import "layout/main";
