--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -12,6 +12,9 @@
             gap: .5rem;
             width: 100%;
       }
+      &__contactArticle--googleMaps {
+            position: relative;
+      }
       &__contactDetailItem {
             @include displayFlexRow;
             gap: .75rem;
