--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -24,6 +24,7 @@ main {
       width: min(100%, 45rem);
       padding: 0 1rem;
       margin: 0 auto 5rem; 
+      position: relative;
       &__figure {
             @include displayFlexColumn;
       }
@@ -44,6 +45,7 @@ main {
       width: min(100%, 45rem);
       padding: 0 1rem;
       margin: 0 auto 5rem;
+      position: relative;
       &__sectionContentWrapper {
             @include displayFlexColumn;
             gap: 2rem;
@@ -95,6 +97,7 @@ main {
       width: min(100%, 45rem);
       padding: 0 1rem;
       margin: 0 auto 5rem;
+      position: relative;
       &__sectionContentWrapper {
             @include displayFlexColumn;
             gap: 2rem;
