--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,11 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
   background-color: #cececeff;
   /* This makes dealing with the sizes of elements much easier, 
   	and generally eliminates a number of pitfalls you can stumble on
@@ -121,17 +126,33 @@ body {
   line-height: 1.6;
   text-align: center;
 }
+@media (min-width: 56.25em) {
+  body {
+    text-align: justify;
+  }
+}
 
 .heroHeading {
   color: #001d49;
   font-family: "Montserrat", sans-serif;
-  font-size: clamp(2rem, 5vw, 2.8rem);
+  font-size: clamp(2rem, 6.5vw, 2.4rem);
   font-weight: 900;
   text-align: center;
   text-shadow: 1px 1px 1px #07964c;
   text-transform: uppercase;
   letter-spacing: 1px;
   line-height: 1.2;
+}
+@media (min-width: 37.5em) {
+  .heroHeading {
+    font-size: clamp(2.4rem, 4.5vw, 3.5rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .heroHeading {
+    font-size: clamp(2rem, 6.5vw, 2.4rem);
+    text-align: justify;
+  }
 }
 .heroHeading__heroHeadingByline {
   font-family: "Lato", sans-serif;
@@ -141,6 +162,11 @@ body {
   text-shadow: none;
   text-transform: none;
   line-height: 1.2;
+}
+@media (min-width: 56.25em) {
+  .heroHeading__heroHeadingByline {
+    text-align: justify;
+  }
 }
 
 .headingH2 {
@@ -152,6 +178,11 @@ body {
   text-transform: uppercase;
   line-height: 1.2;
   letter-spacing: 3px;
+}
+@media (min-width: 56.25em) {
+  .headingH2 {
+    text-align: justify;
+  }
 }
 
 .headingH3 {
@@ -180,11 +211,21 @@ body {
   text-align: left;
   line-height: 1.1;
 }
+@media (min-width: 56.25em) {
+  .headingH3--servicesListItemHeading {
+    text-align: left;
+  }
+}
 .headingH3--processListItemHeading {
   color: #016732;
   font-size: clamp(1.5rem, 5vw, 1.7rem);
   text-align: center;
   line-height: 1.1;
+}
+@media (min-width: 56.25em) {
+  .headingH3--processListItemHeading {
+    text-align: justify;
+  }
 }
 .headingH3--footerFigure {
   color: #001d49;
@@ -195,6 +236,11 @@ body {
   text-align: center;
   letter-spacing: 2px;
   line-height: 1.2;
+}
+@media (min-width: 56.25em) {
+  .headingH3--footerFigure {
+    text-align: justify;
+  }
 }
 
 .headingH4 {
@@ -217,6 +263,11 @@ body {
   text-align: left;
   line-height: 1.1;
 }
+@media (min-width: 56.25em) {
+  .headingH4--serviceAreasHeading {
+    text-align: justify;
+  }
+}
 
 .paragraph {
   line-height: 1.6;
@@ -225,8 +276,18 @@ body {
   text-align: left;
   line-height: 1.2;
 }
+@media (min-width: 56.25em) {
+  .paragraph--servicesListItemParagraph {
+    text-align: justify;
+  }
+}
 .paragraph--serviceAreaName {
   text-align: left;
+}
+@media (min-width: 56.25em) {
+  .paragraph--serviceAreaName {
+    text-align: justify;
+  }
 }
 .paragraph__serviceAreaName--nylstroom, .paragraph__serviceAreaName--warmbad, .paragraph__serviceAreaName--vaalwater, .paragraph__serviceAreaName--naboom, .paragraph__serviceAreaName--leeupoort {
   color: #001c29ff;
@@ -246,10 +307,20 @@ body {
   font-weight: 700;
   line-height: 1.1;
 }
+@media (min-width: 56.25em) {
+  .paragraph--footerAddress {
+    margin-left: 0.7rem;
+  }
+}
 .paragraph--footerAddressDetail {
   color: #001d49;
   text-decoration: underline;
   text-underline-offset: 3px;
+}
+@media (min-width: 56.25em) {
+  .paragraph--footerAddressDetail {
+    text-align: left;
+  }
 }
 .paragraph--footerCopyright {
   font-size: clamp(1.2rem, 5vw, 2rem);
@@ -300,6 +371,11 @@ body {
   font-weight: 700;
   text-align: left;
   line-height: 1.1;
+}
+@media (min-width: 56.25em) {
+  .logo__text {
+    text-align: justify;
+  }
 }
 
 .contact {
@@ -563,12 +639,45 @@ body {
   margin: 0 auto 5rem;
   position: relative;
 }
+@media (min-width: 37.5em) {
+  .contact {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 37.5em) {
+  .contact {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .contact {
+    width: min(100%, 75rem);
+    padding: 1rem 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .contact {
+    width: min(100%, 100rem);
+  }
+}
 .contact__sectionContentWrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .contact__sectionContentWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 5rem;
+  }
 }
 .contact__contactArticle {
   display: flex;
@@ -578,6 +687,18 @@ body {
   gap: 2rem;
   gap: 0.5rem;
   width: 100%;
+}
+@media (min-width: 56.25em) {
+  .contact__contactArticle {
+    align-items: flex-start;
+    flex: 1 0 350px;
+  }
+}
+@media (min-width: 112.5em) {
+  .contact__contactArticle {
+    align-items: flex-start;
+    flex: 1 0 550px;
+  }
 }
 .contact__contactArticle--googleMaps {
   position: relative;
@@ -610,9 +731,76 @@ body {
   width: 100%;
   height: min(60vw, 40rem);
 }
+@media (min-width: 56.25em) {
+  .contact__contactGoogleMapsIframe {
+    max-height: 250px;
+  }
+}
 
 .socialMedia {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: min(100%, 45rem);
+  padding: 0 1rem;
+  margin: 0 auto 5rem;
+}
+@media (min-width: 37.5em) {
+  .socialMedia {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .socialMedia {
+    width: min(100%, 75rem);
+    align-items: flex-start;
+    padding: 1rem 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .socialMedia {
+    width: min(100%, 100rem);
+  }
+}
+.socialMedia__sectionContentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .socialMedia__sectionContentWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 5rem;
+  }
+}
+.socialMedia__socialMediaArticle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.5rem;
+}
+@media (min-width: 56.25em) {
+  .socialMedia__socialMediaArticle {
+    align-items: flex-start;
+    flex: 1 0 340px;
+  }
+}
+.socialMedia__socialMediaDetailIcon {
+  width: 3.25rem;
+  height: 3.25rem;
+  margin-top: 0.5rem;
 }
 
 .footer {
@@ -621,10 +809,30 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  gap: 2rem;
+  gap: 3rem;
   background: linear-gradient(135deg, rgba(0, 29, 73, 0.65), rgba(111, 110, 110, 0.5), rgba(137, 137, 137, 0.3), #b9b9b9, rgba(111, 110, 110, 0.5), rgba(0, 29, 73, 0.64));
   border-top: 2px solid #001d49;
+  width: 100%;
   padding: 5rem 1rem 1rem;
+}
+@media (min-width: 56.25em) {
+  .footer {
+    gap: 5rem;
+  }
+}
+.footer__figureAndNavContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 3rem;
+}
+@media (min-width: 56.25em) {
+  .footer__figureAndNavContainer {
+    align-items: flex-start;
+    gap: 5rem;
+  }
 }
 .footer__figure {
   display: flex;
@@ -632,6 +840,16 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+@media (min-width: 37.5em) {
+  .footer__figure {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    gap: 3rem;
+  }
 }
 .footer__logoImg {
   display: flex;
@@ -641,6 +859,11 @@ body {
   width: 20rem;
   height: auto;
 }
+@media (min-width: 37.5em) {
+  .footer__logoImg {
+    width: clamp(10rem, 18vw, 14rem);
+  }
+}
 .footer__footerNavigationContainer {
   display: flex;
   flex-direction: column;
@@ -648,6 +871,30 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .footer__footerNavigationContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+}
+.footer__navVerticalLine {
+  display: none;
+}
+@media (min-width: 56.25em) {
+  .footer__navVerticalLine {
+    align-self: center;
+    display: block;
+    background-color: rgba(0, 29, 73, 0.15);
+    width: 2px;
+    height: 15rem;
+  }
 }
 .footer__footerSocialMediaContainer, .footer__footerWebsiteNavigationContainer, .footer__footerAddressContainer, .footer__footerLegalNoticeContainer {
   display: flex;
@@ -657,8 +904,30 @@ body {
   gap: 2rem;
   gap: 1rem;
 }
+@media (min-width: 56.25em) {
+  .footer__footerSocialMediaContainer, .footer__footerWebsiteNavigationContainer, .footer__footerLegalNoticeContainer {
+    align-items: flex-start;
+  }
+}
 .footer__footerAddressContainer {
   gap: 1.75rem;
+}
+@media (min-width: 56.25em) {
+  .footer__footerAddressContainer {
+    align-items: flex-start;
+  }
+}
+@media (min-width: 56.25em) {
+  .footer__footerContactDetailContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 2rem;
+  }
 }
 .footer__footerContactDetailItem {
   display: flex;
@@ -668,6 +937,26 @@ body {
   gap: 2rem;
   gap: 0rem;
 }
+@media (min-width: 56.25em) {
+  .footer__footerContactDetailItem {
+    align-items: flex-start;
+    flex: 0 0 300px;
+  }
+}
+.footer__footerContactDetailItem--number {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0rem;
+}
+@media (min-width: 56.25em) {
+  .footer__footerContactDetailItem--number {
+    align-items: flex-start;
+    flex: 0 0 100px;
+  }
+}
 .footer__footerContactDetailLink {
   display: flex;
   flex-direction: row;
@@ -675,6 +964,11 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.5rem;
+}
+@media (min-width: 56.25em) {
+  .footer__footerContactDetailLink {
+    align-items: flex-start;
+  }
 }
 .footer #footerMobileContactLink {
   margin-right: 2rem;
@@ -700,6 +994,11 @@ body {
   gap: 2rem;
   gap: 0.25rem;
 }
+@media (min-width: 56.25em) {
+  .footer__footerNavlist {
+    align-items: flex-start;
+  }
+}
 .footer__footerDeveloperParagraph {
   display: flex;
   flex-direction: column;
@@ -721,17 +1020,45 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  gap: 5rem;
   width: min(100%, 45rem);
   min-height: 95vh;
   padding: 1rem;
   margin: 0 auto;
 }
-.hero__heroCtaContainer {
+@media (min-width: 37.5em) {
+  .hero {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .hero {
+    width: min(100%, 75rem);
+    padding: 1rem 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .hero {
+    width: min(100%, 100rem);
+  }
+}
+.hero__heroLogoAndCtaContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .hero__heroLogoAndCtaContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    gap: 5rem;
+  }
 }
 .hero__heroHeading {
   display: flex;
@@ -740,6 +1067,29 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.75rem;
+}
+@media (min-width: 56.25em) {
+  .hero__heroHeading {
+    flex: 1 0 45%;
+  }
+}
+@media (min-width: 75em) {
+  .hero__heroHeading {
+    flex: 1 0 35%;
+  }
+}
+.hero__cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .hero__cta {
+    align-items: flex-start;
+  }
 }
 .hero__heroCredentialsContainer {
   display: flex;
@@ -785,7 +1135,25 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  gap: 1rem;
+  gap: 1.75rem;
+}
+@media (min-width: 37.5em) {
+  .heroHeadingPrimary {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+@media (min-width: 56.25em) {
+  .heroHeadingPrimary {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
 }
 .heroHeadingPrimary__heroHeadingPrimaryLogoImg {
   display: block;
@@ -794,39 +1162,18 @@ body {
   border-radius: 10000px;
   box-shadow: -5px 5px 12px 2px rgba(0, 28, 41, 0.35);
 }
+@media (min-width: 37.5em) {
+  .heroHeadingPrimary__heroHeadingPrimaryLogoImg {
+    width: clamp(10rem, 18vw, 14rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .heroHeadingPrimary__heroHeadingPrimaryLogoImg {
+    order: 2;
+  }
+}
 .heroHeadingPrimary__heroHeadingPrimaryText {
-  width: clamp(19rem, 50vw, 23rem);
-}
-
-.socialMedia {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  width: min(100%, 45rem);
-  padding: 0 1rem;
-  margin: 0 auto 5rem;
-}
-.socialMedia__sectionContentWrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-.socialMedia__socialMediaArticle {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  gap: 0.5rem;
-}
-.socialMedia__socialMediaDetailIcon {
-  width: 3.25rem;
-  height: 3.25rem;
-  margin-top: 0.5rem;
+  width: 100%;
 }
 
 .about {
@@ -840,12 +1187,40 @@ body {
   margin: 0 auto 5rem;
   position: relative;
 }
+@media (min-width: 37.5em) {
+  .about {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .about {
+    align-items: flex-start;
+    width: min(100%, 75rem);
+    padding: 0 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .about {
+    width: min(100%, 100rem);
+  }
+}
 .about__figure {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .about__figure {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    gap: 3rem;
+  }
 }
 .about__figureImg {
   display: block;
@@ -870,6 +1245,23 @@ body {
   margin: 0 auto 5rem;
   position: relative;
 }
+@media (min-width: 37.5em) {
+  .services {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .services {
+    align-items: flex-start;
+    width: min(100%, 75rem);
+    padding: 0 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .services {
+    width: min(100%, 100rem);
+  }
+}
 .services__sectionContentWrapper {
   display: flex;
   flex-direction: column;
@@ -878,12 +1270,28 @@ body {
   gap: 2rem;
   gap: 2rem;
 }
+@media (min-width: 56.25em) {
+  .services__sectionContentWrapper {
+    align-items: flex-start;
+  }
+}
 .services__servicesList {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__servicesList {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
 }
 .services__servicesListItem {
   display: flex;
@@ -898,6 +1306,58 @@ body {
   border-radius: none;
   box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
   padding: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__servicesListItem {
+    justify-content: flex-start;
+    align-items: flex-start;
+    row-gap: 2rem;
+    flex: 1 0 350px;
+    min-height: 270px;
+  }
+}
+@media (min-width: 75em) {
+  .services__servicesListItem {
+    flex: 1 0 450px;
+    min-height: 260px;
+  }
+}
+.services__articleContentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__articleContentWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    gap: 5rem;
+  }
+}
+.services__servicesImageAndIntroContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__servicesImageAndIntroContainer {
+    flex: 1 0 55%;
+  }
+}
+.services__servicesCtaContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 .services__servicesArticle {
   display: flex;
@@ -914,6 +1374,11 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__servicesArticle--serviceArea {
+    align-items: flex-start;
+  }
 }
 .services__servicesArticleAreasListContainer {
   display: flex;
@@ -937,6 +1402,19 @@ body {
   height: auto;
   padding: 0.25rem;
 }
+.services__servicesDetailItem {
+  margin-top: 2rem;
+}
+@media (min-width: 56.25em) {
+  .services__servicesDetailItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+  }
+}
 
 .process {
   display: flex;
@@ -948,6 +1426,23 @@ body {
   padding: 0 1rem;
   margin: 0 auto 5rem;
   position: relative;
+}
+@media (min-width: 37.5em) {
+  .process {
+    width: min(100%, 55rem);
+  }
+}
+@media (min-width: 56.25em) {
+  .process {
+    align-items: flex-start;
+    width: min(100%, 75rem);
+    padding: 0 5rem;
+  }
+}
+@media (min-width: 75em) {
+  .process {
+    width: min(100%, 100rem);
+  }
 }
 .process__sectionContentWrapper {
   display: flex;
@@ -964,6 +1459,17 @@ body {
   align-items: center;
   gap: 2rem;
 }
+@media (min-width: 56.25em) {
+  .process__processList {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
+}
 .process__processListItem {
   display: flex;
   flex-direction: column;
@@ -976,6 +1482,12 @@ body {
   box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
   width: 100%;
   padding: 2rem;
+}
+@media (min-width: 56.25em) {
+  .process__processListItem {
+    align-items: flex-start;
+    flex: 1 0 350px;
+  }
 }
 .process__servicesArticle {
   display: flex;
