--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -39,6 +39,7 @@ html {
 }
 
 body {
+	@include displayFlexColumn;
 	background-color: $cp-silver;
 	/* This makes dealing with the sizes of elements much easier, 
 		and generally eliminates a number of pitfalls you can stumble on
