--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,18 +14,27 @@ body {
 	font-weight: 500;
 	line-height: 1.6;
 	text-align: center;
+	@include respond(tab-land) {
+		text-align: justify;
+	}
 }
 .heroHeading {
 	color: $cp-dark-blue;
 	font-family: "Montserrat", sans-serif; 
-	font-size: clamp(2rem, 5vw, 2.8rem);
+	font-size: clamp(2rem, 6.5vw, 2.4rem);
 	font-weight: 900;
 	text-align: center;
 	text-shadow: 1px 1px 1px rgba($cp-shamrockGreen, 1);
 	text-transform: uppercase;
-	
 	letter-spacing: 1px;
 	line-height: 1.2;
+	@include respond(tab-port) {
+		font-size: clamp(2.4rem, 4.5vw, 3.5rem);
+	}
+	@include respond(tab-land) {
+		font-size: clamp(2rem, 6.5vw, 2.4rem);
+		text-align: justify;
+	}
       &__heroHeadingByline {
 		font-family: "Lato", sans-serif; 
 		font-size: clamp(1.4rem, 4.5vw, 1.6rem);
@@ -34,6 +43,9 @@ body {
 		text-shadow: none;
 		text-transform: none;
 		line-height: 1.2;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 }
 .headingH2 {
@@ -45,6 +57,9 @@ body {
 	text-transform: uppercase;
 	line-height: 1.2;
 	letter-spacing: 3px;
+	@include respond(tab-land) {
+		text-align: justify;
+	}
 }
 .headingH3 {
 	color: $cf-dark-shamrockGreen;
@@ -70,12 +85,18 @@ body {
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: left;
 		line-height: 1.1;
+		@include respond(tab-land) {
+			text-align: left;
+		}
 	}
 	&--processListItemHeading {
 		color: $cf-dark-shamrockGreen;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: center;
 		line-height: 1.1;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 	&--footerFigure {
 		color: $cp-dark-blue;
@@ -86,6 +107,9 @@ body {
 		text-align: center;
 		letter-spacing: 2px;
 		line-height: 1.2;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 }
 .headingH4 {
@@ -106,7 +130,9 @@ body {
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
 		text-align: left;
 		line-height: 1.1;
-
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 }
 .paragraph {
@@ -114,9 +140,15 @@ body {
 	&--servicesListItemParagraph {
 		text-align: left;
 		line-height: 1.2;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 	&--serviceAreaName {
 		text-align: left;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 	&__serviceAreaName--nylstroom, &__serviceAreaName--warmbad, &__serviceAreaName--vaalwater, &__serviceAreaName--naboom, &__serviceAreaName--leeupoort {
 		color: $cp-richBlack;
@@ -135,11 +167,17 @@ body {
 		font-size: clamp(1.6rem, 5.2vw, 2rem);
 		font-weight: 700;
 		line-height: 1.1;
+		@include respond(tab-land) {
+			margin-left: .7rem;
+		}
 	}
 	&--footerAddressDetail {
 		color: $cf-dark-blue;
 		text-decoration: underline;
 		text-underline-offset: 3px;
+		@include respond(tab-land) {
+			text-align: left;
+		}
 	}
 	&--footerCopyright {
 		font-size: clamp(1.2rem, 5vw, 2rem);
@@ -192,6 +230,9 @@ body {
 		font-weight: 700;
 		text-align: left;
 		line-height: 1.1;
+		@include respond(tab-land) {
+			text-align: justify;
+		}
 	}
 }
 .contact {
@@ -204,6 +245,5 @@ body {
 		color: $cf-dark-blue;
 		font-style: normal;
 		line-height: 1.2;
-
 	}
 }
