--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -1,16 +1,43 @@
 .contact {
       @include displayFlexColumn;
       width: min(100%, 45rem);
+      @include respond(tab-port) {
+            width: min(100%, 55rem);
+      }
+      @include respond(tab-port) {
+            width: min(100%, 55rem);
+      }
+      @include respond(tab-land) {
+            width: min(100%, 75rem);
+            padding: 1rem 5rem;
+      }
+      @include respond(desk) {
+            width: min(100%, 100rem);
+      }
       padding: 0 1rem;
       margin: 0 auto 5rem;
       position: relative;
       &__sectionContentWrapper {
             @include displayFlexColumn;
+            @include respond(tab-land) {
+                  @include displayFlexRow;
+                  align-items: flex-start;
+                  flex-wrap: wrap;
+                  gap: 5rem;
+            }
       }
       &__contactArticle {
             @include displayFlexColumn;
             gap: .5rem;
             width: 100%;
+            @include respond(tab-land) {
+                  align-items: flex-start;
+                  flex: 1 0 350px;
+            }
+            @include respond(big-desk) {
+                  align-items: flex-start;
+                  flex: 1 0 550px;
+            }
       }
       &__contactArticle--googleMaps {
             position: relative;
@@ -38,5 +65,8 @@
             display: block;
             width: 100%;
             height: min(60vw, 40rem);
+            @include respond(tab-land) {
+                  max-height: 250px;
+            }
       }
 }
