--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,16 +4,45 @@
 }
 .hero {
       @include displayFlexColumn;
+      gap: 5rem;
       width: min(100%, 45rem);
       min-height: 95vh;
       padding: 1rem;
       margin: 0 auto;
-      &__heroCtaContainer {
+      @include respond(tab-port) {
+            width: min(100%, 55rem);
+      }
+      @include respond(tab-land) {
+            width: min(100%, 75rem);
+            padding: 1rem 5rem;
+      }
+      @include respond(desk) {
+            width: min(100%, 100rem);
+      }
+      &__heroLogoAndCtaContainer {
             @include displayFlexColumn;
+            @include respond(tab-land) {
+                  @include displayFlexRow;
+                  align-items: flex-start;
+                  gap: 5rem;
+            }
       }
       &__heroHeading {
             @include displayFlexColumn;
             gap: .75rem;
+            @include respond(tab-land) {
+                  flex: 1 0 45%;
+            }
+            @include respond(desk) {
+                  flex: 1 0 35%;
+            }
+      }
+      &__cta {
+            @include displayFlexColumn;
+            gap: 2rem;
+            @include respond(tab-land) {
+                  align-items: flex-start;
+            }
       }
       &__heroCredentialsContainer {
             @include displayFlexColumn;
@@ -43,15 +72,27 @@
 }
 .heroHeadingPrimary {
       @include displayFlexColumn;
-      gap: 1rem;
+      gap: 1.75rem;
+      @include respond(tab-port) {
+            @include displayFlexRow;
+      }
+      @include respond(tab-land) {
+            @include displayFlexColumn;
+      }
       &__heroHeadingPrimaryLogoImg {
             display: block;
             width: clamp(18rem, 22vw, 24rem);
+            @include respond(tab-port) {
+                  width: clamp(10rem, 18vw, 14rem);
+            }
+            @include respond(tab-land) {
+                  order: 2;
+            }
             height: auto;
             border-radius: $br-cirle;
             box-shadow: -5px 5px 12px 2px rgba($cp-richBlack, .35);
       }
       &__heroHeadingPrimaryText {
-            width: clamp(19rem, 50vw, 23rem);
+            width: 100%;
       }
 }
