--- a/css/styles.css
+++ b/css/styles.css
@@ -1100,6 +1100,7 @@ body {
   background: linear-gradient(135deg, #cecece, rgba(137, 137, 137, 0.5), rgba(137, 137, 137, 0.95));
   border: 2px solid #07964c;
   box-shadow: 0 0 12px 2px rgba(0, 28, 41, 0.25);
+  width: 100%;
   padding: 2rem;
 }
 .hero__figureContainer {
