--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -49,6 +49,7 @@
             background: linear-gradient(135deg, rgba($cp-silver, 1), rgba($cp-grey, .5), rgba($cp-grey, .95));
             border: 2px solid $cp-shamrockGreen;
             box-shadow: 0 0 12px 2px rgba($cp-richBlack, .25);
+            width: 100%;
             padding: 2rem;
       }
       &__figureContainer {
